# fast_zero

./: .env-example  .gitignore  README.md  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 026566fed50c_adding_field_updated_at.py  221aa29b0277_create_users_table.py  32ccc63fd1bb_add_atribute_updated_at_in_the_model_.py  4ed36426576d_update_column_updated_at.py  87dd9d6aa10e_merge_branches.py  97caafe78bd8_create_users_table.py  e93b5e43a5be_create_todo_tables.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
